package ex1_2;

public interface GeometriObject {
    public abstract double getArea();
    public abstract double getPerimeter();
}
