package ex1_5;

public interface GeometricObject {
    double getArea();

    double getPerimeter();
}
