/**
 * main
 */
public class main {

    String fname = "Hoang";
    String lname = "Quy";
    int age = 19;

    public static void main(String[] args) {
       Main Obj = new main();
        System.out.println("Name: " +Obj.fname + " "+Obj.lname);
        System.out.println("age: "+Obj.age);
    }
}