@startuml

title __JAVAOOP_7's Class Diagram__\n

  namespace  {
    class Main {
    }
  }
  

  namespace  {
    namespace x1_1 {
      class ex1_1.Circle {
      }
    }
  }
  

  namespace  {
    namespace x1_1 {
      class ex1_1.Rectangle {
      }
    }
  }
  

  namespace  {
    namespace x1_1 {
      abstract class ex1_1.Shape {
      }
    }
  }
  

  namespace  {
    namespace x1_1 {
      class ex1_1.Square {
      }
    }
  }
  

  namespace  {
    namespace x1_2 {
      class ex1_2.Circle {
      }
    }
  }
  

  namespace  {
    namespace x1_2 {
      interface ex1_2.GeometriObject {
      }
    }
  }
  

  namespace  {
    namespace x1_2 {
      class ex1_2.Rectangle {
      }
    }
  }
  

  namespace  {
    namespace x1_2 {
      class ex1_2.Test {
      }
    }
  }
  

  namespace  {
    namespace x1_3 {
      interface ex1_3.Movable {
      }
    }
  }
  

  namespace  {
    namespace x1_3 {
      class ex1_3.MovablePoint {
      }
    }
  }
  

  namespace  {
    namespace x1_3 {
      class ex1_3.Test {
      }
    }
  }
  

  namespace  {
    namespace x1_4 {
      interface ex1_4.Movable {
      }
    }
  }
  

  namespace  {
    namespace x1_4 {
      class ex1_4.MovableCircle {
      }
    }
  }
  

  namespace  {
    namespace x1_4 {
      class ex1_4.MovablePoint {
      }
    }
  }
  

  namespace  {
    namespace x1_4 {
      class ex1_4.Test {
      }
    }
  }
  

  namespace  {
    namespace x1_5 {
      class ex1_5.Circle {
      }
    }
  }
  

  namespace  {
    namespace x1_5 {
      interface ex1_5.GeometricObject {
      }
    }
  }
  

  namespace  {
    namespace x1_5 {
      interface ex1_5.Resizable {
      }
    }
  }
  

  namespace  {
    namespace x1_5 {
      class ex1_5.ResizableCircle {
      }
    }
  }
  

  namespace  {
    namespace x1_5 {
      class ex1_5.Test {
      }
    }
  }
  

  namespace  {
    namespace x1_6 {
      abstract class ex1_6.Animal {
      }
    }
  }
  

  namespace  {
    namespace x1_6 {
      class ex1_6.BigDog {
      }
    }
  }
  

  namespace  {
    namespace x1_6 {
      class ex1_6.Cat {
      }
    }
  }
  

  namespace  {
    namespace x1_6 {
      class ex1_6.Dog {
      }
    }
  }
  

  namespace  {
    namespace x1_6 {
      class ex1_6.Test {
      }
    }
  }
  

  namespace  {
    namespace x1_7 {
      abstract class ex1_7.Animal {
      }
    }
  }
  

  namespace  {
    namespace x1_7 {
      class ex1_7.BigDog {
      }
    }
  }
  

  namespace  {
    namespace x1_7 {
      class ex1_7.Cat {
      }
    }
  }
  

  namespace  {
    namespace x1_7 {
      class ex1_7.Dog {
      }
    }
  }
  

  namespace  {
    namespace x1_7 {
      class ex1_7.TestAnimal {
      }
    }
  }
  

  ex1_1.Circle -up-|> ex1_1.Shape
  ex1_1.Rectangle -up-|> ex1_1.Shape
  ex1_1.Square -up-|> ex1_1.Rectangle
  ex1_2.Circle .up.|> ex1_2.GeometriObject
  ex1_2.Rectangle .up.|> ex1_2.GeometriObject
  ex1_3.MovablePoint .up.|> ex1_3.Movable
  ex1_4.MovableCircle .up.|> ex1_4.Movable
  ex1_4.MovableCircle -up-|> ex1_4.MovablePoint
  ex1_4.MovableCircle o-- ex1_4.MovablePoint : center
  ex1_4.MovablePoint .up.|> ex1_4.Movable
  ex1_5.Circle .up.|> ex1_5.GeometricObject
  ex1_5.ResizableCircle .up.|> ex1_5.Resizable
  ex1_5.ResizableCircle -up-|> ex1_5.Circle
  ex1_6.BigDog -up-|> ex1_6.Dog
  ex1_6.Cat -up-|> ex1_6.Animal
  ex1_6.Dog -up-|> ex1_6.Animal
  ex1_7.BigDog -up-|> ex1_7.Dog
  ex1_7.Cat -up-|> ex1_7.Animal
  ex1_7.Dog -up-|> ex1_7.Animal


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
